fix: nav-bar spacing

--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -3,18 +3,18 @@
   width: 100%;
   height: 6rem;
   position: fixed;
-  padding: 0 1rem 0 1rem;
   top: 0;
 
   .nav-options {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    padding: 0.375rem;
   }
 
   .cityProfile .cities,
   .return-button {
-    margin: 0.8rem 0 0 -5rem;
+    margin: 0.5rem 0 0 0;
   }
 
   .page-title {
@@ -64,6 +64,10 @@
     margin-top: 0.3em;
   }
 
+  li {
+    margin-left: -10rem;
+  }
+
   .add-profile {
     width: 14rem;
     height: 3rem;
@@ -74,7 +78,6 @@
     font-weight: 500;
     line-height: 26px;
     padding: 0;
-    margin-top: 0.3rem;
   }
 
   .add-profile:hover,
